Wed Mar 12 08:53:48 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* man/po4a/Makefile.am (update-po): New target.

Wed Mar 12 08:53:32 GMT 2008  Robert Luberda  <robert@debian.org>

	* man/man1/apropos.man1 (OPTIONS, FILES), man/man1/man.man1
	  (ENVIRONMENT, FILES), man/man1/manconv.man1 (OPTIONS),
	  man/man1/manpath.man1 (OPTIONS, FILES), man/man1/whatis.man1
	  (OPTIONS, EXIT STATUS, FILES), man/man8/mandb.man8 (OPTIONS):
	  Consolidate various nearly-identical strings.
	* man/po4a/po/man-db-manpages.pot: Update.

Tue Mar 11 10:41:05 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* Version: 2.5.2-pre1 (really this time).

Tue Mar 11 10:39:45 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* configure.ac (AC_CONFIG_FILES): Add man/po4a/Makefile.
	* man/Makefile.am (SUBDIRS): Add po4a.
	* man/po4a/Makefile.am: New file. Distribute po4a.cfg and
	  po/man-db-manpages.pot.

Tue Mar 11 10:26:49 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* Version: 2.5.2-pre1.
	* po/man-db.pot, po/*.po: Update.

Mon Mar 10 19:42:19 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* man/man1/man.man1 (Controlling formatted output): Quote %pager,
	  since it may expand to multiple words.

Mon Mar 10 16:07:11 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* docs/NEWS: More updates for 2.5.2.

Mon Mar 10 16:00:15 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* man/po4a/po/man-db.pot: Rename to ...
	* man/po4a/po/man-db-manpages.pot: ... this, so that the translation
	  domain name stops clashing with that used for program translations
	  (per Benno Schulenberg).
	* man/po4a/po4a.cfg (po4a_paths): Adjust for rename.

Mon Mar 10 01:05:57 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* man/Rules.man (.man1.1, .man8.8): Substitute name of manual page
	  being processed as %program%.
	* man/man1/apropos.man1 (OPTIONS), man/man1/man.man1 (Finding manual
	  pages), man/man1/whatis.man1 (OPTIONS): Consolidate
	  nearly-identical descriptions of --locale using %program% (thanks,